--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2>Projects</h2>
 
 <ul>
-<li><a href="/webgl">Metroid (Unity Remaster)</a></li>
+<li><a href="webgl">Metroid (Unity Remaster)</a></li>
 </ul>
 
 </html>
