Change link to itch

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <h2>Projects</h2>
 
 <ul>
-<li><a href="webgl">Metroid (Unity Remaster)</a></li>
+<li><a href="https://adamgunn.itch.io/metroid-unity-remaster">Metroid (Unity Remaster)</a></li>
 </ul>
+
+<p>For this project I developed the doors and room transition systems. I implemented the audio manager for sound effects and music. I collaborated in creating a new game mechanic and designed some of the new custom levels. I also aided in programming the movement code. I used C# to write scripts to implement functionality through components in Unity.</p>
 
 </html>
