--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 <h2>Projects</h2>
 
 <ul>
-<li><a href="https://adamgunn.itch.io/metroid-unity-remaster">Metroid (Unity Remaster)</a></li>
+<li>
+	<a href="https://adamgunn.itch.io/metroid-unity-remaster">Metroid (Unity Remaster)</a>
+	<p>For this project I developed the doors and room transition systems. I implemented the audio manager for sound effects and music. I collaborated in creating a new game mechanic and designed some of the new custom levels. I also aided in programming the movement code. I used C# to write scripts to implement functionality through components in Unity.</p>
+</li>
+<li>
+	<a href="https://skipkip.itch.io/hue-la-la">Hue La La</a>
+	<p>A 2D platformer in which you must change colors to solve puzzles. Change between white, blue, and red to clear levels. Dash into colored walls to stick to and climb them. Developed over the course of 2 weeks in Unity with C# and external assets. Conducted playtesting to determine what design changes are needed to make the game better.</p>
+</li>
 </ul>
-
-<p>For this project I developed the doors and room transition systems. I implemented the audio manager for sound effects and music. I collaborated in creating a new game mechanic and designed some of the new custom levels. I also aided in programming the movement code. I used C# to write scripts to implement functionality through components in Unity.</p>
 
 </html>
