--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<a href="https://skipkip.itch.io/hue-la-la">Hue La La</a>
 	<p>A 2D platformer in which you must change colors to solve puzzles. Change between white, blue, and red to clear levels. Dash into colored walls to stick to and climb them. Developed over the course of 2 weeks in Unity with C# and external assets. Conducted playtesting to determine what design changes are needed to make the game better.</p>
 </li>
+<li>
+    <a href="https://nitroneon.itch.io/turbo-takeout">Turbo Takeout</a>
+    <p>A chaotic voxel two player party game in which you play as a scooter driver delivering food orders to customers. Drive and dash into the other player to steal their orders and make more money! Developed over the course of 7 weeks with a group of 5 in C# and Unity. My responsibilities included working on the player controls and the logic related to player spawning. I designed the first level of the game and the tutorial to get players accustomed to the mechanics.</p>
+</li>
 </ul>
 
 </html>
